syntax = "proto3";

package ftp;

message ReadRequest {
    string name = 1;
    uint64 pos = 2;
    uint64 bytes = 3;
}

message WriteRequest {
    string name = 1;
    string mode = 2;
    string data = 3;
    uint64 checksum = 4;
}

message ListRequest {
    string name = 1;
    bool list = 2;
}

message ReadResponse {
    string name = 1;
    string data = 2;
    bool continue_reading = 3;
}

message WriteResponse {}

message ListResponse {
    string paths = 3;
}

service Operations {
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Write(WriteRequest) returns (WriteResponse);
    rpc List(ListRequest) returns (ListResponse);
}
